@@ -1,3 +1,9 @@
+Fri May  9 12:55:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Bug_3321_Regression/Bug_3321_Regression.mpc:
+        * tao/Bug_3321_Regression/main.cpp:
+          Messaging is not used here
+
 Fri May  9 12:42:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/orbconf.h:
